Crear los dos priemeros enemigos y arreglar los disparos del jugador

--- a/The binding of Adri.vcxproj
+++ b/The binding of Adri.vcxproj
@@ -152,11 +152,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Actor.h" />
-    <ClInclude Include="Alien.h" />
+    <ClInclude Include="EnemigoBasico.h" />
     <ClInclude Include="Animation.h" />
     <ClInclude Include="Audio.h" />
     <ClInclude Include="Background.h" />
-    <ClInclude Include="Dron.h" />
+    <ClInclude Include="EnemigoSinCabeza.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameLayer.h" />
@@ -174,11 +174,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Actor.cpp" />
-    <ClCompile Include="Alien.cpp" />
+    <ClCompile Include="EnemigoBasico.cpp" />
     <ClCompile Include="Animation.cpp" />
     <ClCompile Include="Audio.cpp" />
     <ClCompile Include="Background.cpp" />
-    <ClCompile Include="Dron.cpp" />
+    <ClCompile Include="EnemigoSinCabeza.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameLayer.cpp" />
