Añadido enemigo que dispara

--- a/The binding of Adri.vcxproj
+++ b/The binding of Adri.vcxproj
@@ -156,6 +156,7 @@
     <ClInclude Include="Animation.h" />
     <ClInclude Include="Audio.h" />
     <ClInclude Include="Background.h" />
+    <ClInclude Include="EnemigoDispara.h" />
     <ClInclude Include="EnemigoSinCabeza.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="Game.h" />
@@ -178,6 +179,7 @@
     <ClCompile Include="Animation.cpp" />
     <ClCompile Include="Audio.cpp" />
     <ClCompile Include="Background.cpp" />
+    <ClCompile Include="EnemigoDispara.cpp" />
     <ClCompile Include="EnemigoSinCabeza.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Game.cpp" />
