--- a/The binding of Adri.vcxproj
+++ b/The binding of Adri.vcxproj
@@ -164,7 +164,7 @@
     <ClInclude Include="GameLayer.h" />
     <ClInclude Include="Layer.h" />
     <ClInclude Include="MenuLayer.h" />
-    <ClInclude Include="Moneda.h" />
+    <ClInclude Include="Bomba.h" />
     <ClInclude Include="MoscaBomba.h" />
     <ClInclude Include="Pad.h" />
     <ClInclude Include="Player.h" />
@@ -191,7 +191,7 @@
     <ClCompile Include="Layer.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MenuLayer.cpp" />
-    <ClCompile Include="Moneda.cpp" />
+    <ClCompile Include="Bomba.cpp" />
     <ClCompile Include="MoscaBomba.cpp" />
     <ClCompile Include="Pad.cpp" />
     <ClCompile Include="Player.cpp" />
