--- a/The binding of Adri.vcxproj
+++ b/The binding of Adri.vcxproj
@@ -173,6 +173,7 @@
     <ClInclude Include="Player.h" />
     <ClInclude Include="Projectile.h" />
     <ClInclude Include="ProjectileEnemigo.h" />
+    <ClInclude Include="Puerta.h" />
     <ClInclude Include="Recolectable.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Space.h" />
@@ -204,6 +205,7 @@
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Projectile.cpp" />
     <ClCompile Include="ProjectileEnemigo.cpp" />
+    <ClCompile Include="Puerta.cpp" />
     <ClCompile Include="Recolectable.cpp" />
     <ClCompile Include="Space.cpp" />
     <ClCompile Include="Text.cpp" />
